force-app/main/default/objects/ONC_Marketing_Material__c/ONC_Marketing_Material__c.object-meta.xml
<CustomObject>
    <description>Vertiba 5/27/14 - custom lookup table for marketing materials Item code, product, price</description>
    <label>Marketing Material</label>
    <nameField>
        <label>ONC Marketing Material Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Materials</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>