force-app/main/default/objects/ONC_Marketing_Material__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to mark Marketing Material is Active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>