force-app/main/default/objects/ONC_Marketing_Material__c/fields/Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Cost__c</fullName>
    <description>Vertiba 5/27/14 - cost for this item - used in lookup table for material items - used for Sunshine Act compliance reporting</description>
    <inlineHelpText>Enter the unit cost for this item</inlineHelpText>
    <label>Item Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>