force-app/main/default/objects/ONC_Marketing_Material__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>Vertiba 5/27/14 - added for ONC Marketing Materials lookup</description>
    <inlineHelpText>Enter the item description</inlineHelpText>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>