force-app/main/default/objects/ONC_Marketing_Material__c/fields/Old_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Item_Id__c</fullName>
    <label>Old Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>